--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "file-loader": "^0.11.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "url-loader": "^0.5.9"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "moment": "^2.18.1",
+    "react-file-download": "^0.3.4",
     "react-router": "^4.2.0",
     "torrent-search-api": "^1.0.12"
   }
