--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9"
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "moment": "^2.18.1",
