finish providers filters, add page limit

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "cors": "^2.8.4",
     "express": "^4.15.4",
